# DISSECT

./: .gitignore  Cargo.toml  Makefile  PRECISION.md  README.md  RULES.md  TAXONOMY.md  build.rs  capabilities.yaml  clippy.toml  criticality.md  rustfmt.toml
.github/workflows/: ci.yml
crates/scpt/: Cargo.toml
crates/scpt/examples/: analyze_samples.rs  extract.rs
crates/scpt/src/: lib.rs
crates/scpt/tests/: dissect_integration.rs  integration.rs
crates/scpt/tests/fixtures/: shell_script.applescript  shell_script.scpt  simple.applescript  simple.scpt  tell_app.applescript  tell_app.scpt
dissect-macros/: Cargo.toml
dissect-macros/src/: lib.rs
docs/: SYSCALL_DETECTION_PLAN.md
examples/: detailed_memory_profile.rs  heap_profile.rs  isolate_memory.rs  memory_profile_pe.rs  test_stng_filter.rs
src/: archive.rs  archive_utils.rs  cache.rs  capabilities.rs  capabilities.rs.bak4  cli.rs  composite_rules.rs  config.rs  constant_decoder.rs  decoders.rs  decoders_test.rs  diff.rs  entropy.rs  env_mapper.rs  env_mapper_test.rs  env_mapper_test.rs.bak  error.rs  file_io.rs  graph.rs  ip_validator.rs  lib.rs  main.rs  main.rs.bak  main.rs.bak8  main.rs.orig  map.rs  memory_tracker.rs  output.rs  output.rs.bak7  path_mapper.rs  path_mapper.rs.bak  path_mapper_test.rs  path_mapper_test.rs.bak  radare2.rs  report.rs  rules  rules.rs  scanner.rs  strings.rs  strings.rs.bakfinal  (+13 more)
src/amos_cipher/: detection.rs  error.rs  mod.rs  postprocess.rs  table_extractor.rs  types.rs  variant_a.rs  variant_b.rs
src/analyzers/: applescript.rs  archive.rs  ast_walker.rs  c.rs  chrome_manifest.rs  chrome_manifest_test.rs  comment_metrics.rs  csharp.rs  elf.rs  embedded_code_detector.rs  function_metrics.rs  generic.rs  generic.rs.bak  go.rs  go.rs.bak  go.rs.broken  identifier_metrics.rs  import_metrics.rs  import_metrics_test.rs  java.rs  java_class.rs  java_class.rs.bak  javascript.rs  lua.rs  macho.rs  macho_codesign.rs  mod.rs  mod.rs.orig  overlay.rs  package_json.rs  package_json.rs.bak  package_json_test.rs  pe.rs  perl.rs  php.rs  powershell.rs  python.rs  python.rs.bak  rtf.rs  ruby.rs  (+11 more)
src/capabilities/: error_formatting.rs  filter_low_value_any_test.rs  indexes.rs  mapper.rs  mapper.rs.orig  mapper_test.rs  mapper_test.rs.bak  mod.rs  models.rs  parsing.rs  tests.rs  validation.rs  validation.rs.bak
src/commands/: analyze.rs  diff.rs  mod.rs  profile.rs  scan.rs  shared.rs
src/composite_rules/: ast_kinds.rs  condition.rs  condition.rs.orig  context.rs  debug.rs  description_validation_tests.rs  evaluators.rs  mod.rs  not_validation_tests.rs  python_aes_import_test.rs  section_map.rs  tests.rs  tests.rs.bak  tests.rs.bak2  traits.rs  traits_test.rs  types.rs
src/diff/: formatting.rs  mod.rs  risk.rs  tests.rs  utils.rs
src/extractors/: aes_payload.rs  aes_payload_test.rs  encoded_payload.rs  encoded_payload_test.rs  encoded_payload_test.rs.bak  mod.rs
src/lang_strings/: common.rs  go.rs  instr.rs  mod.rs  rust.rs
src/radare2/: cache.rs  mod.rs  mod.rs.bak  models.rs  parsing.rs
src/rtf/: error.rs  hex_decoder.rs  mod.rs  ole_extractor.rs  parser.rs  types.rs
src/rules/: composite.rs  evaluators.rs  mod.rs  tests.rs  traits.rs  types.rs
src/types/: binary.rs  binary.rs.bak  binary_metrics.rs  code_structure.rs  container_metrics.rs  core.rs  diff.rs  diff.rs.bak  diff.rs.bak2  field_paths.rs  field_paths_test.rs  file_analysis.rs  language_metrics.rs  ml_features.rs  mod.rs  paths_env.rs  scores.rs  tests.rs  tests.rs.bak  text_metrics.rs  traits_findings.rs
testdata/: test_exact_symbol.yaml  test_regex_symbol.yaml
tests/: amos_traits_test.rs  applescript_analysis_test.rs  benign_binary_test.rs  binary_metrics_collection_test.rs  binary_traits_test.rs  cli_integration_test.rs  coinminer_analysis_test.rs  directory_scan_test.rs  embedded_code_detection_test.rs  evidence_propagation_test.rs  ghostpenguin_analysis_test.rs  ghostpenguin_extended_test.rs  graph_test.rs  host_info_composite_test.rs  host_info_composite_test.rs.bak  json_rejection_test.rs  keylogger_detection_test.rs  known_bad_test.rs  kworker_integration_test.rs  kworker_integration_test.rs.bak  layer_path_test.rs  multiverze_analysis_test.rs  nodejs_backdoor_test.rs  react2shell_analysis_test.rs  string_vs_content_test.rs  strings_performance_test.rs  symbol_extraction_test.rs  test_match_location_test.rs  trait_strictness_test.rs  utf16_support_test.rs  vget_analysis_test.rs  woff2_malware_detection.rs  yaml_capability_filtering_test.rs  yara_filtering_test.rs
tools/trait-basher/: Makefile  bad_prompt.tmpl  cache.go  colors.go  go.mod  go.sum  good_prompt.tmpl  logging.go  main.go  main_test.go  progress.go  prompt.go  prompt.tmpl  tools.tmpl  trait-basher  types.go
tools/web-dissect/: APKINDEX  Dockerfile  Makefile  README.md  apko.yaml  build-apko.sh  go.mod  go.sum  main.go  melange.yaml  overlays  sbom-aarch64.spdx.json  sbom-index.spdx.json  sbom-x86_64.spdx.json
tools/yara-update/: go.mod  main.go
traits/: EXAMPLE_TRAIT_CAPABILITY.yaml  EXAMPLE_WITH_MBC_ATTACK.yaml  README.md  anti-analysis.yaml  anti-analysis.yaml.backup  anti-obfuscation.yaml  c.yaml  c2-exfil.yaml  credential-access.yaml  crypto.yaml  execution.yaml  filesystem.yaml  go.yaml  java.yaml  javascript.yaml  network.yaml  persistence.yaml  ruby.yaml  rust.yaml
traits/anti-analysis/: LD-DEBUG.yara  LD-PROFILE.yara  anti-debugger.yara  process-check.yara  random-behavior.yara  vm-check.yara
traits/c2/: client.yara  refs.yara
traits/collect/: narrative.yaml
traits/cred/: dotenv-theft.yaml
traits/credential/: clipboard.yara  keylogger.yara
traits/crypto/: aes.yara  aes.yara.bak  rc4.yara  rc4.yara.bak
traits/evasion/: marker-files.yaml
traits/exec/: command.yara  install-time.yaml  npm-preinstall.yara  pipe.yara
traits/exfil/: Library-Mail.yara  Library-Mail.yara.bak  b64-zlib.yara  b64-zlib.yara.bak  collection.yara  collection.yara.bak  curl-elf.yara  curl-elf.yara.bak  curl-post.yara  curl-post.yara.bak  discord.yara  discord.yara.bak  exfil.yara  exfil.yara.bak  http-headers.yara  http-headers.yara.bak  (+29 more)
(+6399 files in other folders)
