[package]
name = "dissect"
version = "0.1.0"
edition = "2021"
authors = ["DISSECT Team"]
description = "Deep static analysis tool for extracting features from binaries and source code"
license = "Apache-2.0"

[dependencies]
# Binary parsing
goblin = "0.8"

# YARA pattern matching
yara-x = "0.10"

# Tree-sitter parsers
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# File operations
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"

# Parallelization
rayon = "1.10"

# Utilities
sha2 = "0.10"
regex = "1.11"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
tempfile = "3.13"

[[bin]]
name = "dissect"
path = "src/main.rs"
