[package]
name = "dissect"
version = "0.1.0"
edition = "2021"
authors = ["DISSECT Team"]
description = "Deep static analysis tool for extracting features from binaries and source code"
license = "Apache-2.0"

[workspace]
members = [".", "crates/scpt"]

[dependencies]
# Binary parsing
goblin = "0.8"

# Language-aware string extraction
stng = { git = "https://github.com/HEXXDECIMAL/stng.git" }

# AppleScript parsing
scpt = { path = "crates/scpt" }

# YARA pattern matching
yara-x = "0.10"

# Tree-sitter parsers
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-bash = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.24"
tree-sitter-php = "0.24"
tree-sitter-perl = "1.1"
tree-sitter-lua = "0.4"
tree-sitter-c-sharp = "0.23"
tree-sitter-powershell = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-objc = "3.0"
tree-sitter-groovy = "0.1"
tree-sitter-scala = "0.24"
tree-sitter-zig = "1.1"
tree-sitter-elixir = "0.3"

# Serialization
plist = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1.3"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"

# File operations
walkdir = "2.5"
zip = { version = "2.2", default-features = true }
sevenz-rust = "0.6"
apple-xar = { version = "0.20", default-features = false }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
ar = "0.9"
cpio = "0.4"
zstd = "0.13"
unrar = "0.5"

# Parallelization
rayon = "1.10"
crossbeam-channel = "0.5"

# Cryptography (for decrypting obfuscated payloads)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }

# Utilities
sha2 = "0.10"
regex = "1.11"
memchr = "2.7"
aho-corasick = "1.1"
rustc-hash = "2.1"
dashmap = "6.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
roxmltree = "0.20"
tempfile = "3.13"
strsim = "0.11"
dirs = "5.0"
atty = "0.2.14"
parking_lot = "0.12"  # For efficient mutexes in memory tracking
memmap2 = "0.9"  # Memory-mapped file I/O for large files
smallvec = "1.13"  # Stack-allocated vectors for small collections

# Logging (tracing is the modern standard, more powerful than log+env_logger)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lib]
name = "dissect"
path = "src/lib.rs"

[[bin]]
name = "dissect"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
dhat = "0.3.3"
predicates = "3.0"

[profile.test]
opt-level = 1  # Faster test execution

[profile.dev]
opt-level = 0
debug = "line-tables-only"  # Faster builds, still debuggable

# Optimize heavy dependencies in debug builds for faster test execution
[profile.dev.package.yara-x]
opt-level = 3

[profile.dev.package.regex-syntax]
opt-level = 3

[profile.dev.package.wasmtime]
opt-level = 3

[profile.dev.package.cranelift-codegen]
opt-level = 3

[profile.dev.package.regalloc2]
opt-level = 3
